--- a/WebUI/ClientApp/src/app/pages/order-managment/recently-orders/recently-orders.component.html
+++ b/WebUI/ClientApp/src/app/pages/order-managment/recently-orders/recently-orders.component.html
@@ -60,7 +60,7 @@
                                                 </div>
                                             </td>
                                             <td> {{ order.customerName }} </td>
-                                            <td> {{order?.customerId?.substr(0, 5)}} </td>
+                                            <td> {{order?.customerCode}} </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -112,7 +112,7 @@
                                                 </div>
                                             </td>
                                             <td> {{ order.customerName }} </td>
-                                            <td> {{order?.customerId?.substr(0, 5)}} </td>
+                                            <td> {{order?.customerCode}} </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -164,7 +164,7 @@
                                                 </div>
                                             </td>
                                             <td> {{ order.customerName }} </td>
-                                            <td> {{order?.customerId?.substr(0, 5)}} </td>
+                                            <td> {{order?.customerCode}} </td>
                                         </tr>
                                     </tbody>
                                 </table>
