--- a/WebUI/ClientApp/src/app/pages/distributor-managment/distributors/distributor-editor/distributor-editor.component.scss
+++ b/WebUI/ClientApp/src/app/pages/distributor-managment/distributors/distributor-editor/distributor-editor.component.scss
@@ -63,3 +63,13 @@
     }
   }
 }
+.example-chip-list {
+  width: 100%;
+}
+* /deep/ {
+  direction: rtl !important;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
