--- a/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -48,6 +48,9 @@
       <li class="nav-item" *ngIf="isAdmin">
         <a class="nav-link" routerLink="/distributors" routerLinkActive="active">الموزعين</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/cities" routerLinkActive="active">المدن والمناطق</a>
+      </li>
     </ul>
     <!-- <div>
       <a class="nav-link text-white" (click)="logout()"><i class="fas fa-user text-white"></i></a>
