--- a/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
         <a class="nav-link" routerLink="/distributors" routerLinkActive="active">الموزعين</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/cities" routerLinkActive="active">المدن والمناطق</a>
+        <a class="nav-link" routerLink="/cities" routerLinkActive="active">المدن</a>
       </li>
     </ul>
     <!-- <div>
