--- a/WebUI/ClientApp/src/app/pages/cities-managment/cities/cities.component.scss
+++ b/WebUI/ClientApp/src/app/pages/cities-managment/cities/cities.component.scss
@@ -1,3 +1,14 @@
-.mat-expanded .mat-expansion-panel-header-title .material-icons{
-    transform: rotate(180deg);
-  }
+.mat-expanded .mat-expansion-panel-header-title .material-icons {
+  transform: rotate(180deg);
+}
+.mat-icon {
+  cursor: pointer;
+}
+.search-card {
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  align-items: center;
+  align-content: center;
+  display: flex;
+}
