Adding auth in edit profile and photos sizes

--- a/WebUI/ClientApp/src/app/pages/offer-managment/offers/offer-editor/offer-editor.component.html
+++ b/WebUI/ClientApp/src/app/pages/offer-managment/offers/offer-editor/offer-editor.component.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="col-5 offer-img-wrapper">
-                <img [src]="BasePhotoUrl + offer.photoUrl" class="img-fluid text-right"
+                <img [src]="BasePhotoUrl + offer.photoUrl" class="img-fluid text-right" width="304" height="160"
                     onerror="this.src='assets/images/placeholder.png';">
                 <label for="offer-img" class="mt-2">
                     <span class="btn btn-outline-secondary" (click)="changePhoto(offer.photoUrl)">استبدال الصورة</span>
