--- a/WebUI/ClientApp/src/app/shared/components/popups/photo-editor/photo-editor.component.html
+++ b/WebUI/ClientApp/src/app/shared/components/popups/photo-editor/photo-editor.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <img [src]="croppedImage" class="img-corpper" />
+            <img [src]="croppedImage" class="img-corpper" [style.width.px]="imgWidth" [style.height.px]="imgHight" />
             <div class="progress m-3" *ngIf="uploadPercent > 0">
                 <div class="progress-bar" role="progressbar" [style.width.%]="uploadPercent" aria-valuemin="0"
                     aria-valuemax="100">{{uploadPercent}}%</div>
@@ -28,19 +28,19 @@
         </div>
         <div class="col-6">
             <div *ngIf="!isLinkImg">
-                <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" class="img-corpper"
-                    [containWithinAspectRatio]="containWithinAspectRatio" [aspectRatio]="4 / 4" [resizeToWidth]="300"
-                    [cropperMinWidth]="400" [onlyScaleDown]="true" [roundCropper]="false"
-                    [canvasRotation]="canvasRotation" [transform]="transform" [alignImage]="'left'"
-                    [style.display]="showCropper ? null : 'none'" format="png" (imageCropped)="imageCropped($event)"
-                    (imageLoaded)="imageLoaded()" (cropperReady)="cropperReady($event)"
-                    (loadImageFailed)="loadImageFailed()"></image-cropper>
+                <image-cropper [imageChangedEvent]="imageChangedEvent" class="img-corpper" [roundCropper]="false"
+                    [canvasRotation]="canvasRotation" [transform]="transform" [alignImage]="'center'"
+                    maintainAspectRatio="false" [cropperStaticWidth]="imgWidth" [cropperStaticHeight]="imgHight"
+                    [resizeToWidth]="imgWidth" [resizeToHeight]="imgHight" [style.display]="showCropper ? null : 'none'"
+                    format="png" (imageCropped)="imageCropped($event)" (imageLoaded)="imageLoaded()"
+                    (cropperReady)="cropperReady($event)" (loadImageFailed)="loadImageFailed()" [autoCrop]="true">
+                </image-cropper>
             </div>
             <div *ngIf="isLinkImg">
-                <image-cropper [imageURL]="imgurl" [maintainAspectRatio]="true" class="img-corpper"
-                    [containWithinAspectRatio]="containWithinAspectRatio" [aspectRatio]="4 / 4" [resizeToWidth]="300"
-                    [cropperMinWidth]="400" [onlyScaleDown]="true" [roundCropper]="false"
-                    [canvasRotation]="canvasRotation" [transform]="transform" [alignImage]="'left'"
+                <image-cropper [imageURL]="imgurl" class="img-corpper" [roundCropper]="false"
+                    [canvasRotation]="canvasRotation" [transform]="transform" [alignImage]="'center'"
+                    maintainAspectRatio="false" [resizeToWidth]="imgWidth" [resizeToHeight]="imgHight"
+                    [cropperStaticWidth]="imgWidth" [cropperStaticHeight]="imgHight"
                     [style.display]="showCropper ? null : 'none'" format="png" (imageCropped)="imageCropped($event)"
                     (imageLoaded)="imageLoaded()" (cropperReady)="cropperReady($event)"
                     (loadImageFailed)="loadImageFailed()"></image-cropper>
