--- a/WebUI/ClientApp/src/app/shared/components/popups/photo-editor/photo-editor.component.scss
+++ b/WebUI/ClientApp/src/app/shared/components/popups/photo-editor/photo-editor.component.scss
@@ -40,11 +40,11 @@ form {
 //     outline: -webkit-focus-ring-color auto 5px;
 // }
 
-.img-corpper {
-    border: solid 1px black;
-    border-style: dashed;
-    width: 300px;
-    height: 170px;
-    // width: 200px;
-    // height: 200px;
-}
+// .img-corpper {
+//     border: solid 1px black;
+//     border-style: dashed;
+//     width: 300px;
+//     height: 170px;
+//     // width: 200px;
+//     // height: 200px;
+// }
